// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rmrk2.0.0 Consolidator: EQUIPPABLE Add new Collection id to Base slot equippable 1`] = `
{
  "bases": {
    "base-3-KBASE777": {
      "block": 3,
      "changes": [],
      "id": "base-3-KBASE777",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "metadata": undefined,
      "parts": [
        {
          "equippable": [
            "d43593c715a56da27d-KANARIABIRDS",
          ],
          "id": "background",
          "type": "slot",
          "z": 0,
        },
        {
          "equippable": [
            "d43593c715a56da27d-KANARIABIRDS",
          ],
          "id": "backpack",
          "type": "slot",
          "z": 1,
        },
        {
          "id": "tail",
          "src": "ipfs://ipfs/QmcEuigDVCScMLs2dcrJ8qU4Q265xGisUyKeYdnnGFn6AE/var3_tail.svg",
          "type": "fixed",
          "z": 2,
        },
      ],
      "symbol": "KBASE777",
      "themes": {
        "themeOne": {
          "_inherit": true,
          "primary": "#fff",
        },
      },
      "type": "svg",
    },
  },
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 0,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [],
  "nfts": {},
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIPPABLE Remove new Collection id to Base slot equippable 1`] = `
{
  "bases": {
    "base-3-KBASE777": {
      "block": 3,
      "changes": [],
      "id": "base-3-KBASE777",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "metadata": undefined,
      "parts": [
        {
          "equippable": [],
          "id": "background",
          "type": "slot",
          "z": 0,
        },
        {
          "equippable": [],
          "id": "backpack",
          "type": "slot",
          "z": 1,
        },
        {
          "id": "tail",
          "src": "ipfs://ipfs/QmcEuigDVCScMLs2dcrJ8qU4Q265xGisUyKeYdnnGFn6AE/var3_tail.svg",
          "type": "fixed",
          "z": 2,
        },
      ],
      "symbol": "KBASE777",
      "themes": {
        "themeOne": {
          "_inherit": true,
          "primary": "#fff",
        },
      },
      "type": "svg",
    },
  },
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 0,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [],
  "nfts": {},
}
`;

exports[`rmrk2.0.0 Consolidator: EQUIPPABLE Replace a Collection id to Base slot equippable 1`] = `
{
  "bases": {
    "base-3-KBASE777": {
      "block": 3,
      "changes": [],
      "id": "base-3-KBASE777",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "metadata": undefined,
      "parts": [
        {
          "equippable": [],
          "id": "background",
          "type": "slot",
          "z": 0,
        },
        {
          "equippable": "*",
          "id": "backpack",
          "type": "slot",
          "z": 1,
        },
        {
          "id": "tail",
          "src": "ipfs://ipfs/QmcEuigDVCScMLs2dcrJ8qU4Q265xGisUyKeYdnnGFn6AE/var3_tail.svg",
          "type": "fixed",
          "z": 2,
        },
      ],
      "symbol": "KBASE777",
      "themes": {
        "themeOne": {
          "_inherit": true,
          "primary": "#fff",
        },
      },
      "type": "svg",
    },
  },
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 0,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [],
  "nfts": {},
}
`;
